Added hilt and changed to MVVM